Fix broken css + bump bundler version

--- a/app/assets/stylesheets/graphql/voyager/rails/voyager-1.0.0-rc.28.css
+++ b/app/assets/stylesheets/graphql/voyager/rails/voyager-1.0.0-rc.28.css
@@ -355,7 +355,7 @@
   border-left: 3px solid transparent
 }
 
-.doc-category > .item > description-box {
+.doc-category > .item > .description-box {
   .margin-top: 5px;
 }
 
